Add link to other HTML files.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,24 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title></title>
+    <title>Disney Resort</title>
   </head>
   <body>
+    <h1>Welcome to Disney Resort</h1>
+
+    <h2>We can't wait to have you visit!</h2>
+
+    <h2>Clink the links below to find more information</h2>
+
+    <a href="accommodation.html">Accommodations</a>
+
+    <a href="activities.html">Activities</a>
+
+    <a href="travel-arrangements.html">Travel Arrangements</a>
+
+    <a href="pictures.html">Pictures</a>
+
+    <a href="contact-information.html">Contact Information</a>
 
   </body>
 
