Add body to accommodations.html.

--- a/accommodations.html
+++ b/accommodations.html
@@ -2,10 +2,27 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title></title>
+    <title>Accommodation</title>
   </head>
   <body>
-
+    <h1>Accommodation</h1>
+    <h2>Room Details</h2>
+    <ul>
+      <li>King Suite</li>
+        <ul>
+          <li>Full Kitchen</li>
+          <li>King Bed</li>
+          <li>Jacuzzi Bath</li>
+          <li>Mini Bar</li>
+        </ul>
+      <li>Queen Suite</li>
+        <ul>
+          <li>Full Kitchen</li>
+          <li>King Bed</li>
+          <li>Jacuzzi Bath</li>
+          <li>Mini Bar</li>
+        </ul>
+    </ul>
   </body>
 
 </html>
