Add body to activities.html.

--- a/activities.html
+++ b/activities.html
@@ -2,10 +2,25 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title></title>
+    <title>Activities</title>
   </head>
   <body>
+    <h1>Activities</h1>
 
+    <h2>Adult Activities</h2>
+      <ul>
+        <li>Wave Pool</li>
+        <li>Roller Coaster</li>
+        <li>Secret Bar</li>
+        <li>Spa</li>
+      </ul>
+    <h2>Youth Activities</h2>
+      <ul>
+        <li>Cars Land</li>
+        <li>StarWars Park</li>
+        <li>Mr. Toads Wild Ride</li>
+        <li>It's a small world</li>
+      </ul>  
   </body>
 
 </html>
