add body to contact-information.html.

--- a/contact-information.html
+++ b/contact-information.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <title></title>
+    <title>Contact Information</title>
   </head>
   <body>
-
+    <h1>Contacts</h1>
+    <h2>Booking Information</h2>
+    <p>For more information for booking or accommodations please call - 1-855-553-4763.</p>
   </body>
 
 </html>
