Add images to all pages.

--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
     <h1>Welcome to Disney Resort</h1>
 
     <h2>We can't wait to have you visit!</h2>
-
+    <img src="https://picsum.photos/200/300/?random" alt="A random image.">
     <h2>Clink the links below to find more information</h2>
-
-    <a href="accommodation.html">Accommodations</a>
-
-    <a href="activities.html">Activities</a>
-
-    <a href="travel-arrangements.html">Travel Arrangements</a>
-
-    <a href="pictures.html">Pictures</a>
-
-    <a href="contact-information.html">Contact Information</a>
-
+    <ul>
+      <li><a href="accommodation.html">Accommodations</a></li>
+      <li><a href="activities.html">Activities</a></li>
+      <li><a href="travel-arrangements.html">Travel Arrangements</a></li>
+      <li><a href="pictures.html">Pictures</a></li>
+      <li><a href="contact-information.html">Contact Information</a></li>
+    </ul>
   </body>
 
 </html>
