--- a/pictures.html
+++ b/pictures.html
@@ -5,7 +5,10 @@
     <title></title>
   </head>
   <body>
-
+    <h1>Photos</h1>
+    <img src="https://picsum.photos/200/300/?random" alt="A random image.">
+    <img src="https://picsum.photos/200/300/?random" alt="A random image.">
+    <img src="https://picsum.photos/200/300/?random" alt="A random image.">
+    <img src="https://picsum.photos/200/300/?random" alt="A random image.">
   </body>
-
 </html>
