--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="https://picsum.photos/200/300/?random" alt="A random image.">
     <h2>Clink the links below to find more information</h2>
     <ul>
-      <li><a href="accommodation.html">Accommodations</a></li>
+      <li><a href="accommodations.html">Accommodations</a></li>
       <li><a href="activities.html">Activities</a></li>
       <li><a href="travel-arrangements.html">Travel Arrangements</a></li>
       <li><a href="pictures.html">Pictures</a></li>
